--- a/Greasemonkey/Steamgifts/Steamgifts_points_checker/resources/styles.css
+++ b/Greasemonkey/Steamgifts/Steamgifts_points_checker/resources/styles.css
@@ -2,6 +2,7 @@ header { /* Header always visible */
     position: fixed !important;
     left:0 !important;
     right:0 !important;
+    top: 0 !important;
     margin: 0 auto !important;
     z-index: 1 !important;
 }
@@ -12,4 +13,8 @@ header { /* Header always visible */
 
 .SGPC_joinable {
     background: rgba(0,255,0,0.1) !important; /* Green */
+}
+
+.SGPC_topWhiteSpace {
+    height: 34px;
 }
